<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tableLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:stretchColumns="*">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bottom_sheet_radius"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            style="@style/PrimaryFlatButton"
            android:layout_width="70dp"
            android:layout_height="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/plus_btn"
            android:theme="@style/PrimaryFlatButton" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/showmap_btn"
                style="@style/PrimaryFlatButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_margin="5dp"
                android:background="#EEEEEE"
                android:drawableTop="@drawable/ic_map_fea"
                android:elevation="0dp"
                android:text="@string/map"
                android:textColor="#000"
                android:theme="@style/PrimaryFlatButton" />

            <Button
                android:id="@+id/showmsg_btn"
                style="@style/PrimaryFlatButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_margin="5dp"
                android:background="#EEEEEE"
                android:drawableTop="@drawable/ic_msgs"
                android:elevation="0dp"
                android:text="@string/messages"
                android:textColor="#000"
                android:theme="@style/PrimaryFlatButton"
                android:tooltipText="@string/messages" />

            <Button
                android:id="@+id/showqiblah_btn"
                style="@style/PrimaryFlatButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="2"
                android:layout_column="2"
                android:layout_margin="5dp"
                android:background="#EEEEEE"
                android:drawableTop="@drawable/qeblah_ic_fea"
                android:elevation="0dp"
                android:text="@string/qibla_compass"
                android:textColor="#000"
                android:theme="@style/PrimaryFlatButton" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/showziartonline_btn"
                style="@style/PrimaryFlatButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="5dp"
                android:background="#EEEEEE"
                android:drawableTop="@drawable/ic_ziartonline_fea"
                android:elevation="0dp"
                android:text="@string/online_pray"
                android:textColor="#000"
                android:theme="@style/PrimaryFlatButton" />

            <Button
                android:id="@+id/showzekrcounter_btn"
                style="@style/PrimaryFlatButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_margin="5dp"
                android:background="#EEEEEE"
                android:drawableTop="@drawable/ic_zekrcounter_fea"
                android:elevation="0dp"
                android:text="@string/zekr_counter"
                android:textColor="#000"
                android:theme="@style/PrimaryFlatButton" />

            <Button
                android:id="@+id/showquran_btn"
                style="@style/PrimaryFlatButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_row="1"
                android:layout_column="2"
                android:layout_margin="5dp"
                android:background="#EEEEEE"
                android:drawableTop="@drawable/ic_quran"
                android:elevation="0dp"
                android:text="@string/quran_adyeh"
                android:textColor="#000"
                android:theme="@style/PrimaryFlatButton"
                android:tooltipText="پیام ها" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

