<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/transparent"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_event_background">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            app:strokeColor="@color/gold"
            android:id="@+id/sahne_jomhuri"
            app:strokeWidth="1dp"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/sahn_jomhuri"
                android:textSize="18sp"
                android:textColor="@color/black" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            android:id="@+id/sahne_jame"
            app:strokeColor="@color/gold"
            app:strokeWidth="1dp"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/sahn_jame"
                android:textSize="18sp"
                android:textColor="@color/black" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            app:cardCornerRadius="5dp"
            android:id="@+id/sahne_azadi"
            app:cardElevation="4dp"
            app:strokeColor="@color/gold"
            app:strokeWidth="1dp"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/sahn_azadi"
                android:textSize="18sp"
                android:textColor="@color/black" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_margin="16dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="4dp"
            android:id="@+id/sahne_enghelab"
            app:strokeColor="@color/gold"
            app:strokeWidth="1dp"
            android:layout_height="60dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/sahn_enghelab"
                android:textSize="18sp"
                android:textColor="@color/black" />
        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>


</LinearLayout>