<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".mapFragments.FilterFragment">


    <HorizontalScrollView
        android:id="@+id/recent_filter_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/recent_filter_width"
                android:layout_height="@dimen/recent_filter_height">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/restaurant" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/restaurant" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/recent_filter_width"
                android:layout_height="@dimen/recent_filter_height">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/hotel" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/hotel"

                    />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/recent_filter_width"
                android:layout_height="@dimen/recent_filter_height">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/coffeeshop" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/coffee_shop" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/recent_filter_width"
                android:layout_height="@dimen/recent_filter_height">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/mosque" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/religious_places" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="@dimen/recent_filter_width"
                android:layout_height="@dimen/recent_filter_height">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/hospital" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:text="@string/hospital" />

            </RelativeLayout>


        </LinearLayout>


    </HorizontalScrollView>

    <ImageView
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/recent_filter_wrapper"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp"
        android:background="@color/gray_400" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/divider"
        android:layout_marginBottom="8dp"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/university_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/university" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/university_txt"
                        android:layout_marginRight="32dp"
                        android:background="@drawable/university" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/residency_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/residency" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/residency_txt"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/residency" />

                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/shop_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/shop" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/shop_txt"
                        android:layout_marginRight="32dp"
                        android:background="@drawable/shop" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/dentistry_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/dentistry" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/dentistry_txt"
                        android:layout_marginRight="32dp"
                        android:background="@drawable/dentistry" />

                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/gym_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/gym" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerVertical="true"
                        android:layout_toLeftOf="@id/gym_txt"
                        android:layout_marginRight="39dp"
                        android:background="@drawable/gym" />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/other_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:text="@string/other" />

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="82dp"
                        android:layout_toLeftOf="@id/other_txt"
                        android:background="@drawable/ic_more_ic_nav" />

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>